--- a/ktmaterial/themes/kitification/sass/_utilities.scss
+++ b/ktmaterial/themes/kitification/sass/_utilities.scss
@@ -633,6 +633,7 @@ iframe.formframe {
         border: 1px solid #444452;
         border-width: 0 1px;
         margin: 0 1px;
+        overflow: hidden;
 
         .post_content {
           color: #d0d0d0;
